--- a/page01.html
+++ b/page01.html
@@ -62,7 +62,7 @@
    <h1 id="blogv3">落冥迦の博客</h1> 
   </header> 
   <div>
-  <h1 id="v2">文章标题</h1> 
+  <h1 id="v2">最新博客！</h1> 
   <p id="v3" class="author">作者：落冥迦</p> 
   <p id="v4" class="date">发布日期：2023年10月24日</p> 
    <p id="v6">Github注册成功辣！！！！！！！</p>
