--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             text-decoration: none;
         }
     </style> 
-  <script src="js/jq.js"></script> 
+  <script src="https://cdn.bootcss.com/mathjax/3.0.5/es5/tex-mml-chtml.js"></script> 
  </head> 
  <body id="v1"> 
   <header id="v2"> 
@@ -139,8 +139,8 @@
     <a id="v16" href="./page01.html">阅读更多</a> 
    </article> 
    <article id="v17"> 
-    <h3 id="v18">文章标题</h3> 
-    <p id="v19">这里是文章的摘要内容。Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem, ipsa.</p> 
+    <h3 id="v18">导入了一个数学库</h3> 
+    <p id="v19">测试一下～\(f(x)=ax^2+bx+c\)</p> 
     <a id="v20" href="#">阅读更多</a> 
    </article> 
   </main> 
